<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settingsmenu_show_pcc"
            android:icon="@drawable/ic_launch_white_24dp"
            android:title="@string/menu_show_pcc" />
        <item
            android:id="@+id/settingsmenu_show_shaft"
            android:icon="@drawable/ic_launch_white_24dp"
            android:title="@string/menu_show_shaft" />
        <item
            android:id="@+id/settingsmenu_show_carburetor"
            android:icon="@drawable/ic_launch_white_24dp"
            android:title="@string/menu_show_carburetor" />
        <item
            android:id="@+id/settingsmenu_show_plate"
            android:icon="@drawable/ic_launch_white_24dp"
            android:title="@string/menu_show_plate" />
        <item
            android:id="@+id/settingsmenu_show_header"
            android:icon="@drawable/ic_launch_white_24dp"
            android:title="@string/menu_show_header" />
    </group>

    <group
        android:id="@+id/grp2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settingsmenu_import_export"
            android:icon="@drawable/ic_import_export_white_24dp"
            android:title="@string/menu_import_export" />
        <item
            android:id="@+id/settingsmenu_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/menu_settings" />
    </group>

    <group
        android:id="@+id/grp3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settingsmenu_info"
            android:icon="@drawable/ic_info_outline_white_24dp"
            android:title="@string/menu_info" />
        <item
            android:id="@+id/settingsmenu_help"
            android:icon="@drawable/ic_help_white_24dp"
            android:title="@string/menu_help" />
    </group>

</menu>